--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,6 +10,8 @@ h5 {
 }
 a {
   font-size: 12px;
+  color: black;
+  text-decoration: none;
 }
 
 .logo img {
@@ -40,6 +42,12 @@ a {
 .container2 img{
     width: 1120px;
 }
+.nav ul {
+  display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 10px;
+}
 
 .credit{
     display: flex;
@@ -55,4 +63,20 @@ a {
     list-style: none;
     gap: 10px;
     
+}
+
+/* Mobile View Styling */
+@media (max-width: 768px){
+  .contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    gap: 80px;
+    padding-left: 30px;
+  }
+
+  .contact img{
+    width: auto;
+  }
 }
