--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,22 +4,24 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial, sans-serif;
+}
+
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-
 .logo {
-  display: flex;
-  flex-direction: row;
+display: flex;
+flex-direction: row;
 }
 .logo img {
   width: 5vh;
   height: 5vh;
 }
-
-.nav ul{
+.navbar-links ul{
   display: flex;
   flex-direction: row;
   list-style: none;
@@ -27,11 +29,21 @@
   cursor: pointer;
 }
 
-a{
+.nav-links {
+  display: flex;
   list-style: none;
-  text-decoration: none;
-  color: black;
 }
+
+
+
+.nav-links a {
+  color: black;
+  text-decoration: none;
+  font-size: 1em;
+  list-style: none;
+}
+
+
 
  a:hover{
   color: blueviolet;
@@ -44,3 +56,53 @@ a{
   border-radius: 4px;
   background: none;
 }
+
+.menus-toggle {
+
+      display: none;
+      font-size: 1.5em;
+      color: white;
+      background: none;
+      border: none;
+      cursor: pointer;
+    
+}
+
+
+
+/* Mobile View Styling */
+@media (max-width: 768px) {
+
+  .container{
+  
+          flex-direction: column;
+          align-items: flex-start;
+          height: auto;
+          padding-bottom: 10px;
+      
+  }
+
+  .container.expanded {
+      height: calc(100vh - 20px); /* full height minus padding */
+    }
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+    }
+  
+    .nav-links.active {
+      display: flex;
+    }
+  
+    .menus-toggle {
+      display: block;
+    }
+  
+    .nav-links li {
+      margin: 10px 0;
+    }
+    .btn{
+      display: none;
+    }
+  }    
